--- a/stock_portfolio/development.ini
+++ b/stock_portfolio/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/stock_portfolio.sqlite
+sqlalchemy.url = postgres://localhost:5432/stocks_dev
 
 retry.attempts = 3
 
