--- a/stock_portfolio/production.ini
+++ b/stock_portfolio/production.ini
@@ -12,7 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/stock_portfolio.sqlite
+sqlalchemy.url = postgres://localhost:5432/stocks
 
 retry.attempts = 3
 
