update production ini

--- a/production.ini
+++ b/production.ini
@@ -3,7 +3,7 @@
 # https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
 ###
 
-[app:main]
+[app:stock_portfolio]
 use = egg:stock_portfolio
 
 pyramid.reload_templates = false
@@ -13,6 +13,14 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
 retry.attempts = 3
+
+[filter:paste_prefix]
+use = egg:PasteDeploy#prefix
+
+[pipeline:main]
+pipeline =
+    paste_prefix
+    stock_portfolio
 
 ###
 # wsgi server configuration
